# hpcg

./: .gitignore  CMakeLists.txt  Makefile.ext  README.md  SINGLE_BULK_OPTIMIZATION.md  SYMGS_OPTIMIZATION_README.md  ajinkya_build.sh  ajinkya_notes.txt  ajinkya_run.sh  bris_build.sh  bris_clean.sh  bris_run.sh  build_optimized_symgs.sh  test_single_bulk_symgs.cpp  test_symgs_optimization.cpp
senders-graph/: senders-graph.dot
setup/: Make.ajinkya_VastAI  Make.ajinkya_hpc  Make.ajinkya_laptop_linux  Make.bris
src/: BenchmarkSYMGS.cpp  BenchmarkSYMGS.hpp  CG.cpp  CG.hpp  CG_ref.cpp  CG_stdexec.cpp  CG_stdexec.hpp  CG_stdexec_exp.cpp  CG_stdexec_expanded.cpp  CG_stdexec_expanded.hpp  CG_stdexec_str.cpp  CG_stdexec_strexp.cpp  CG_stdexec_stripped.cpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeDotProduct_ref.cpp  ComputeDotProduct_ref.hpp  ComputeDotProduct_stdexec.cpp  ComputeDotProduct_stdexec.hpp  ComputeDotProduct_stdpar.cpp  ComputeDotProduct_stdpar.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_opt.cpp  ComputeMG_opt.hpp  ComputeMG_par.cpp  ComputeMG_par.hpp  ComputeMG_ref.cpp  ComputeMG_ref.hpp  ComputeMG_stdexec.cpp  ComputeMG_stdexec.hpp  ComputeMG_stdpar.cpp  ComputeMG_stdpar.hpp  ComputeProlongation_ref.cpp  ComputeProlongation_ref.hpp  ComputeProlongation_stdexec.cpp  ComputeProlongation_stdexec.hpp  ComputeProlongation_stdpar.cpp  ComputeProlongation_stdpar.hpp  ComputeRestriction_ref.cpp  (+59 more)
